--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "file-system": "^2.2.2",
     "lodash": "^4.17.21",
     "ng-zorro-antd": "^15.1.0",
     "rxjs": "~7.8.0",
@@ -29,6 +30,8 @@
     "@angular/cli": "~15.2.5",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^18.15.11",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
